fix(ui-tag): show cut off letter descenders
refs: INSTUI-2237

Expands line height for inner text element to the height of the tag,
less the width of the borders.

TEST PLAN:
- Use tag text containing one or more characters with a large ascender
or descender, and verify that the characters are fully visible, e.g.:

```
<Tag text="ʃ̬ long text to test for truncation" />
```

- Inspect the vertical alignment of text within the tag for all themes.

NOTE: Due to differences in font design, the vertical alignment will not
be the same for all font families. For example, the "instructure" theme
uses Proxima Nova, so the baseline will appear to be shifted up slightly
when compared to the Lato font family used for "canvas" themes. This
effect is also visible in other components, such as
[Pill](https://instructure.design/#Pill)

Reviewed-on: https://gerrit.instructure.com/c/instructure-ui/+/228551
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
Product-Review: Pam Hiett <phiett@instructure.com>
QA-Review: Daniel Sasaki <dsasaki@instructure.com>
Visual-Regression-Test: Steve Jensen <sejensen@instructure.com>

--- a/packages/ui-tag/src/Tag/styles.css
+++ b/packages/ui-tag/src/Tag/styles.css
@@ -11,9 +11,12 @@
 }
 
 .small {
-  height: var(--heightSmall);
   padding: var(--paddingSmall);
   font-size: var(--fontSizeSmall);
+
+  .text {
+    line-height: calc(var(--heightSmall) - (var(--defaultBorderWidth) * 2));
+  }
 
   .icon {
     font-size: 0.75rem;
@@ -21,9 +24,12 @@
 }
 
 .medium {
-  height: var(--heightMedium);
   padding: var(--padding);
   font-size: calc(var(--fontSizeMedium) - 0.0625rem);
+
+  .text {
+    line-height: calc(var(--heightMedium) - (var(--defaultBorderWidth) * 2));
+  }
 
   .icon {
     font-size: 0.75rem;
@@ -31,9 +37,12 @@
 }
 
 .large {
-  height: var(--heightLarge);
   padding: var(--padding);
   font-size: calc(var(--fontSizeLarge) - 0.0625rem);
+
+  .text {
+    line-height: calc(var(--heightLarge) - (var(--defaultBorderWidth) * 2));
+  }
 
   .icon {
     font-size: 0.875rem;
@@ -50,7 +59,9 @@
   &::before {
     content: "";
     box-sizing: border-box;
-    border: var(--focusOutlineWidth) var(--focusOutlineStyle) var(--focusOutlineColor);
+    border:
+      var(--focusOutlineWidth) var(--focusOutlineStyle)
+      var(--focusOutlineColor);
     border-radius: var(--borderRadius);
     position: absolute;
     top: -0.3125rem;
@@ -98,7 +109,9 @@
 
 .default {
   background-color: var(--defaultBackground);
-  border: var(--defaultBorderWidth) var(--defaultBorderStyle) var(--defaultBorderColor);
+  border:
+    var(--defaultBorderWidth) var(--defaultBorderStyle)
+    var(--defaultBorderColor);
   border-radius: var(--defaultBorderRadius);
   color: var(--defaultColor);
 
@@ -127,7 +140,9 @@
 
 .inline {
   background-color: var(--inlineBackground);
-  border: var(--inlineBorderWidth) var(--inlineBorderStyle) var(--inlineBorderColor);
+  border:
+    var(--inlineBorderWidth) var(--inlineBorderStyle)
+    var(--inlineBorderColor);
   border-radius: var(--inlineBorderRadius);
   color: var(--inlineColor);
   cursor: text;
